...

    <!-- Connect Activity -->
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>

    <!-- Search -->
    <string name="text_search_results">Search results</string>
    <string name="text_post_results_title">Posts for %s</string>
    <string name="text_no_results">No results</string>

    <!-- Guided Step -->
    <string name="guided_step_auto_loop_title">Auto-Loop</string>
    <string name="guided_step_auto_loop_breadcrumb">Videos will automatically loop</string>
    <string name="guided_step_auto_loop_description">Enabling this option will make videos automatically loop once they start playing. Would you like this to be enabled?</string>

...
